[package]
name = "fixed_bitmaps"
version = "0.6.0"
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/fixed_bitmaps"
description = "A small crate implementing bitmap functionality around primitive Rust unsigned integers."
repository = "https://github.com/AQUIN0S/FixedBitmaps"
readme = "README.md"
keywords = ["bitmap", "bits", "bit", "flags", "fixed"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
path="src/lib.rs"
