[package]
name = "fixed_bitmaps"
version = "0.7.2"
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/fixed_bitmaps"
description = "A small crate implementing bitmap functionality around primitive Rust unsigned integers."
repository = "https://github.com/AQUIN0S/FixedBitmaps"
readme = "README.md"
keywords = ["bitmap", "bits", "bit", "flags", "static"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
path="src/lib.rs"

[[bin]]
path="src/bin/create_variants.rs"
name="create_variants"

[[bin]]
name="create_tests"
path="src/bin/create_tests.rs"
