[package]
name = "fixed_bitmaps"
version = "0.9.3"
edition = "2018"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/fixed_bitmaps"
description = "A small crate implementing bitmap functionality around primitive Rust unsigned integers."
repository = "https://github.com/AQUIN0S/FixedBitmaps"
readme = "README.md"
keywords = ["bitmap", "bits", "bit", "flags", "static"]
categories = ["data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[lib]
path="src/lib.rs"

[[bin]]
path="src/bin/update_files.rs"
name="update_files"
